Fix to glyph cropping issue

--- a/http_root/turbotiler/TurboTiler.css
+++ b/http_root/turbotiler/TurboTiler.css
@@ -61,7 +61,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  overflow: hidden;
+  /* overflow: hidden; */
   background: transparent;
   place-self: stretch;
 }
